feat: added args validation, scanner and utility calling