@@ -1,9 +1,8 @@
 package pl.wit.projekt;
 
+import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.attribute.FileTime;
-import java.util.List;
-import java.util.Map;
+import java.nio.file.Paths;
 
 public class App {
 	/**
@@ -12,16 +11,28 @@ public class App {
 	 *
 	 */
 	public static void main(String[] args) {
-		// robocza inicjalizacja parametrów
-		int threadPool = 0;
-		String sourcePath = "";
-		String targetPath = "";
 
-		// flow
-		JPGScanner scanner = new JPGScanner(sourcePath);
-		Map<FileTime, List<Path>> mapa = scanner.getMetadata();
+		Validator.validate(args);
 
-		JPGUtility utility = new JPGUtility(threadPool, Path.of(targetPath));
-		utility.copyFiles(mapa);
+		Path sourcePath = Paths.get(args[0]);
+		Path targetPath = Paths.get(args[1]);
+		int threadPool = Integer.parseInt(args[2]);
+
+		JPGScanner scanner = new JPGScanner();
+
+		if (scanner != null) {
+			try {
+				scanner.scanDirectory(sourcePath);
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+		}
+
+		JPGUtility utility = new JPGUtility(threadPool, targetPath);
+		try {
+			utility.copyFiles(scanner.getMetadata());
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
 	}
 }
